# platformer

./: .gitignore  CMakeLists.txt
include/: Entity.hpp  Math.hpp  RenderWindow.hpp
src/: Entity.cpp  Math.cpp  RenderWindow.cpp  main.cpp
